--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "NODE_ENV=production node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=production node src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +13,7 @@
     "js-yaml": "^3.13.1",
     "newman": "^4.5.5",
     "nodemailer": "^6.3.1",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "pug": "^2.0.4"
   }
 }
