--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^4.1.3",
     "email-templates": "^6.0.3",
     "js-yaml": "^3.13.1",
     "newman": "^4.5.5",
+    "newman-reporter-html": "^1.0.5",
     "nodemailer": "^6.3.1",
     "nodemailer-mailgun-transport": "^1.4.0",
     "pug": "^2.0.4"
